
                   Yii Framework Change Log
                   ========================

Version 1.0.1 to be released
----------------------------
- Fixed issue #38: CHhtml links and buttons don't work when they are updated via ajax (Qiang)
- Fixed issue #41: missing function CHttpRequest:: getCsrfTokenFromCookie() (Qiang)
- Fixed issue #42: Wrong links in crud generated admin view (Qiang)

Version 1.0 December 3, 2008
----------------------------
- Added CTabView (Qiang)
- Added CStarRating (Qiang)
- Added CUploadedFile (Qiang)
- Added CFileValidator (Qiang)
- Added CActiveRecord::safeAttributes (Qiang)
- Added hashByName option to asset manager (Qiang)
- Added CHtml::openTag and CHtml::closeTag (Qiang)
- Added CHtml::activeFileField (Qiang)
- Added CFileHelper::getMimeType and CFileHelper::getMimeTypeByExtension (Qiang)
- Added COutputCache::varyByRoute (Qiang)
- Added 'params' to HTML options that are used in CHtml methods (Qiang)
- Added CDbConnection::emulatePrepare (Qiang)
- Added CWebApplication::clientScript and removed CController::clientScript (Qiang)
- Added roles support to CAccessControlFilter (Qiang)
- Added cross-site request forgery prevention (Wei, Qiang)
- Added CPagination.route (Qiang)
- Refactored UserIdentity generated by yiic webapp (Qiang)
- Refactored CLinkPager (Qiang)
- Refactored CFilter (Qiang)
- Removed CClientScript::registerBodyScript and CClientScript::registerBodyScriptFile;
  Added a position parameter to CClientScript::registerScript and CClientScript::registerScriptFile (Qiang)
- Changed CModel::validate() to allow validating specified attributes (Qiang)
- Changed CActiveRecord::save() to allow saving specific attributes (Qiang)
- Fixed a bug in CNumberValidator about checking upper limit (Qiang)
- Fixed a bug in CHtml::dropDownList() which doesn't render the 'name' attribute (Qiang)
- Fixed a bug when MySQL tables are using mixed-case letters in their names, relational
  active record fails to work as expected. (Qiang)