@@ -7,6 +7,7 @@ Version 1.0.1 to be released
 - Fixed issue #38: CHhtml links and buttons don't work when they are updated via ajax (Qiang)
 - Fixed issue #41: missing function CHttpRequest:: getCsrfTokenFromCookie() (Qiang)
 - Fixed issue #42: Wrong links in crud generated admin view (Qiang)
+- Fixed issue #45: Many-to-many relation does not work when both foreign tables are the same (Qiang)
 
 Version 1.0 December 3, 2008
 ----------------------------
